<resources>
    <string name="app_name">PomoList</string>
    <string name="main_list">Todos</string>
    <string name="main_pomodoro">Pomo</string>
    <string name="settings">Settings</string>
    <string name="add_item">Add a todo</string>
    <string name="save">Save</string>
    <string name="note">Add some notes</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="pomo_start_message">you got this!</string>
    <string name="task_time">Task time</string>
    <string name="break_time">Break time</string>
    <string name="close">Close</string>
    <string name="priority">Priority</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_icon">+</string>
    <string name="due">Due</string>
    <string name="warning">"Are you sure you want to exit? This will reset the timer."</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="break_message">take a break. browse reddit. you deserve it</string>
    <string name="pomodoro_instructions">Choose times. The task time is how long you will do the activity.
        The break time is how long you will rest for before starting the next activity. The recommended time
        for task time is 25 minutes with a 5 minute break. Have fun!

    </string>
</resources>

